--- a/_includes/header.html
+++ b/_includes/header.html
@@ -15,21 +15,18 @@
       <div id="main-nav-items" class="collapse navbar-collapse">
         <ul class="nav navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link" href="#">About Us</a>
+            <a class="nav-link px-md-3" href="#">About Us</a>
           </li>
           <li class="nav-item">
-              <a class="nav-link" href="#">Services</a>
+              <a class="nav-link px-md-3" href="#">Services</a>
           </li>
           <li class="nav-item">
-              <a class="nav-link" href="#">Results</a>
+              <a class="nav-link px-md-3" href="#">Results</a>
           </li>
           <li class="nav-item">
-              <a class="nav-link" href="#">Blog</a>
+              <a class="nav-link px-md-3" href="#">Careers</a>
           </li>
-          <li class="nav-item">
-              <a class="nav-link" href="#">Careers</a>
-          </li>
-          <li class="nav-item ml-2">
+          <li class="nav-item ml-3">
               <a class="btn btn-primary text-white text-uppercase" href="#"><i class="fa fa-phone mr-2" aria-hidden="true"></i>Contact Us</a>
           </li>
           {% for my_page in page_paths %}
