--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -5,7 +5,8 @@ layout: default
 <div class="home">
 
   <!-- homepage hero image -->
-  <div class="jumbotron p-0 text-white" style="background-image: url(//unsplash.it/1600/600/?image=668)">
+  <!-- <div class="jumbotron p-0 text-white" style="background-image: url(//unsplash.it/1600/600/?image=668)"> -->
+  <div class="jumbotron p-0 text-white" style="background-image: url(/assets/img/stock/rawpixel-com-296612.jpg);">
     <div class="jumbotron-overlay d-flex" style="background-color: rgba(0,0,0,.5)">
       <div class="container my-auto">
         <h1 class="display-4">Client results are our focus</h1>
@@ -20,29 +21,32 @@ layout: default
   <!-- homepage 3 services list -->
   <div class="container pt-4 pb-5">
     {{ content }}
-    <div class="card-deck">
-      {% for i in (1..3) %}
-        <div class="card mt-4">
-          <div class="position-relative">
-            <img class="card-img" src="//unsplash.it/g/350/230/?image={{i}}" alt="Card image">
-            <a href="#" class="card-img-overlay d-flex text-white">
-              <h4 class="card-title font-weight-bold text-uppercase mt-auto mb-0">Add A <br>Title Here</h4>
+
+    <div class="row pt-4">
+        {% for i in (1..3) %}
+        <div class="col-md-4 mb-4">
+          <h3 class="font-weight-normal">Title goes here</h3>
+          <div class="card mt-1 mb-3">
+            <img class="card-img" src="/assets/img/stock/breather-168761.jpg" alt="card image">
+            <a class="card-img-overlay show-on-hover d-flex text-white" href="#">
+              <span class="card-title m-auto">Learn more</span>
             </a>
           </div>
-          <div class="card-body">
-            <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-          </div>
+          <p>This card has supporting text below as a natural lead-in to additional content.</p>
         </div>
-      {% endfor %}
-    </div><!-- /.card-deck -->
+        {% endfor %}
+    </div>
 
     <!-- homepage bottom 2 services list -->
     <div class="card-deck">
       {% for i in (1..2) %}
-        <div class="card mt-4">
+        <div class="card mt-4 mb-4">
           <div class="row no-gutters">
             <div class="col-lg-5 py-lg-3 pl-lg-3">
-              <a href="#"><img class="w-100" src="//unsplash.it/g/350/230/?image={{i | plus: 4}}" alt="Card image"></a>
+              <div class="position-relative">
+                <img class="card-img w-100" src="//unsplash.it/g/350/230/?image={{i | plus: 4}}" alt="Card image">
+                <a class="card-img-overlay show-on-hover d-flex text-white" href="#"><span class="card-title m-auto">Learn more</span></a>
+              </div>
             </div>
             <div class="col-lg-7 p-3">
               <h6 class="font-weight-bold text-uppercase">Educational Content Development / Management</h6>
@@ -55,20 +59,5 @@ layout: default
     </div><!-- /.card-deck -->
 
   </div><!-- .container -->
-
-  <div class="bg-primary mt-4 p-3 text-white">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-6">
-          <h3 class="mt-4 font-weight-bold">Case Study: Little Rock Partners</h3>
-          <p>It is a paradisematic country, in which roasted parts of sentences fly into your mouth. Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar. The Big Oxmox advised her not to do so, because there were thousands of bad Commas, wild Question Marks and devious Semikoli, but the Little Blind Text didn’t listen. She packed her seven versalia, put her initial into the belt and made herself on the way.</p>
-          <p><a class="btn btn-secondary text-uppercase" href="#">Read more</a></p>
-        </div>
-        <div class="col-md-6">
-          <img class="border" src="//unsplash.it/g/600/400/?image=42" alt="Image">
-        </div>
-      </div>
-    </div>
-  </div>
 
 </div><!-- .home -->
