--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -1,9 +1,12 @@
 @charset "utf-8";
 
-$font-family-sans-serif: Lato, sans-serif;
+// Boostrap overrides
+$font-family-sans-serif: Poppins, sans-serif;
 $font-family-base:       $font-family-sans-serif;
 $enable-rounded: false;
 $blue:    #0857ad;
 $font-weight-bold: 900;
+$nav-link-padding-x: 0.1rem;
+
+// Custom variables
 $font-weight-normal: 400;
-// $border-width: 4px;
