--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -16,11 +16,11 @@
             <li>
               <a href="#" target="_blank"><i class="fa fa-facebook-square" aria-hidden="true"></i></a>
             </li>
-            {% if site.twitter_username %}
+            {% if site.twitter_username -%}
             <li>
                 <a href="https://twitter.com/{{site.twitter_username}}" target="_blank"><i class="fa fa-twitter-square" aria-hidden="true"></i></a>
             </li>
-            {% endif %}
+            {% endif -%}
           </ul>
       </div>
     </div>
