--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -5,14 +5,13 @@ layout: default
 <div class="home">
 
   <!-- homepage hero image -->
-  <!-- <div class="jumbotron p-0 text-white" style="background-image: url(//unsplash.it/1600/600/?image=668)"> -->
-  <div class="jumbotron p-0 text-white" style="background-image: url(/assets/img/stock/rawpixel-com-296612.jpg);">
+  <div class="jumbotron p-0 text-white" style="background-image: url({{page.Hero.Image}});">
     <div class="jumbotron-overlay d-flex" style="background-color: rgba(0,0,0,.5)">
       <div class="container my-auto">
-        <h1 class="display-4">Client results are our focus</h1>
-        <p class="w-75">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+        <h1 class="display-4">{{page.Hero.Title}}</h1>
+        <p class="w-75">{{page.Hero.Description}}</p>
         <p class="lead">
-          <a class="btn btn-outline-light btn-lg text-uppercase" href="#" role="button">Learn how we help</a>
+          <a class="btn btn-outline-light btn-lg text-uppercase" href="{{page.Hero['Button Url']}}" role="button">{{page.Hero['Button Label']}}</a>
         </p>
       </div>
     </div>
@@ -23,11 +22,11 @@ layout: default
     {{ content }}
 
     <div class="row pt-4">
-        {% for i in (1..3) %}
+        {% for i in (0..2) %}
         <div class="col-md-4 mb-4">
-          <h3 class="font-weight-normal">Title goes here</h3>
+          <h4 class="font-weight-normal">{{site.services[i].title}}</h4>
           <div class="card mt-1 mb-3">
-            <img class="card-img" src="/assets/img/stock/breather-168761.jpg" alt="card image">
+            <img class="card-img" src="{{site.services[i].Image}}" alt="card image">
             <a class="card-img-overlay show-on-hover d-flex text-white" href="#">
               <span class="card-title m-auto">Learn more</span>
             </a>
@@ -39,18 +38,20 @@ layout: default
 
     <!-- homepage bottom 2 services list -->
     <div class="card-deck">
-      {% for i in (1..2) %}
+      {% for i in (3..4) %}
         <div class="card mt-4 mb-4">
           <div class="row no-gutters">
             <div class="col-lg-5 py-lg-3 pl-lg-3">
               <div class="position-relative">
-                <img class="card-img w-100" src="//unsplash.it/g/350/230/?image={{i | plus: 4}}" alt="Card image">
-                <a class="card-img-overlay show-on-hover d-flex text-white" href="#"><span class="card-title m-auto">Learn more</span></a>
+                <img class="card-img w-100" src="{{site.services[i].Image}}" alt="{{site.services[i].title}}">
+                <a class="card-img-overlay show-on-hover d-flex text-white" href="#">
+                  <span class="card-title m-auto">Learn more</span>
+                </a>
               </div>
             </div>
             <div class="col-lg-7 p-3">
-              <h6 class="font-weight-bold text-uppercase">Educational Content Development / Management</h6>
-              Creation of educational content and scalable delivery systems, continuing education coordination.
+              <h6 class="font-weight-bold text-uppercase">{{site.services[i].title}}</h6>
+              {{site.services[i]['Short Description']}}
             </div>
           </div>
         </div><!-- /.card -->
