Pull data for homepage from frontmatter

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -31,7 +31,7 @@ layout: default
               <span class="card-title m-auto">Learn more</span>
             </a>
           </div>
-          <p>This card has supporting text below as a natural lead-in to additional content.</p>
+          {{site.services[i]['Short Description']}}
         </div>
         {% endfor %}
     </div>
