--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -7,6 +7,10 @@ $enable-rounded: false;
 $blue:    #0857ad;
 $font-weight-bold: 900;
 $nav-link-padding-x: 0.1rem;
+$navbar-light-color:                rgba(#000,.9);
+$navbar-light-hover-color:          rgba(#000,.6);
+$navbar-light-active-color:         rgba(#000,.5);
+$h4-font-size: 1.4rem;
 
 // Custom variables
 $font-weight-normal: 400;
