Optimized services photos

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -11,7 +11,7 @@ layout: default
         <h1 class="display-4">{{page.Hero.Title}}</h1>
         <p class="w-75">{{page.Hero.Description}}</p>
         <p class="lead">
-          <a class="btn btn-outline-light btn-lg text-uppercase" href="{{page.Hero['Button Url']}}" role="button">{{page.Hero['Button Label']}}</a>
+          <a class="btn btn-outline-light btn-lg mt-3 text-uppercase" href="{{page.Hero['Button Url']}}" role="button">{{page.Hero['Button Label']}}</a>
         </p>
       </div>
     </div>
