--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -1,7 +1,7 @@
 @charset "utf-8";
 
 // Boostrap overrides
-$font-family-sans-serif:    Lato, sans-serif;
+$font-family-sans-serif:    Poppins, sans-serif;
 $font-family-base:          $font-family-sans-serif;
 $enable-rounded:            false;
 $blue:                    #0857ad;
