--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,4 @@
-<header class="site-header" role="banner" style="position: relative">
+<header class="site-header" role="banner">
 
   {% assign default_paths = site.pages | map: "path" -%}
   {% assign page_paths = site.header_pages | default: default_paths -%}
