--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<article class="post">
+<article class="post container py-5">
 
   <header class="post-header">
     <h1 class="post-title">{{ page.title | escape }}</h1>
