--- a/_sass/components/_base.scss
+++ b/_sass/components/_base.scss
@@ -1,3 +1,13 @@
+html {
+  position: relative;
+  min-height: 100%;
+}
+
+body {
+  /* Push body above sticky footer */
+  margin-bottom: 84px;
+}
+
 img {
   max-width: 100%;
 }
@@ -38,6 +48,11 @@ a.show-on-hover {
 }
 
 .site-footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  /* Set the fixed height of the footer here */
+  height: 84px;
   border-top: 2px solid $gray-500;
   background-color: $gray-900;
   font-size: 12px;
