--- a/_includes/header.html
+++ b/_includes/header.html
@@ -14,10 +14,10 @@
       <div id="main-nav-items" class="collapse navbar-collapse">
         <ul class="nav navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link px-md-3" href="#">About Us</a>
+            <a class="nav-link px-md-3" href="/about/">About Us</a>
           </li>
           <li class="nav-item">
-              <a class="nav-link px-md-3" href="#">Services</a>
+              <a class="nav-link px-md-3" href="/services/">Services</a>
           </li>
           <li class="nav-item">
               <a class="nav-link px-md-3" href="#">Results</a>
