Comment spelling fix

--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -1,6 +1,6 @@
 @charset "utf-8";
 
-// Boostrap overrides
+// Bootstrap overrides
 $font-family-sans-serif:    Poppins, sans-serif;
 $font-family-base:          $font-family-sans-serif;
 $enable-rounded:            false;
