--- a/_includes/header.html
+++ b/_includes/header.html
@@ -23,7 +23,7 @@
               <a class="nav-link px-md-3" href="#">Results</a>
           </li>
           <li class="nav-item">
-              <a class="nav-link px-md-3" href="#">Careers</a>
+              <a class="nav-link px-md-3" href="/careers/">Careers</a>
           </li>
           <li class="nav-item ml-3">
               <a class="btn btn-primary text-white text-uppercase" href="#"><i class="fa fa-phone mr-2" aria-hidden="true"></i>Contact Us</a>
