Increased hero description font size

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -11,7 +11,7 @@ layout: default
     <div class="jumbotron-overlay d-flex" style="background-color: rgba(0,0,0,.5)">
       <div class="container my-auto">
         <h1 class="display-4">{{page.Hero.Title}}</h1>
-        <p class="w-75">{{page.Hero.Description}}</p>
+        <p class="w-75 font-weight-light">{{page.Hero.Description}}</p>
         <p class="lead">
           <a class="btn btn-outline-light btn-lg mt-3 text-uppercase" href="{{page.Hero['Button Url']}}" role="button">{{page.Hero['Button Label']}}</a>
         </p>
