--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -5,7 +5,7 @@ layout: default
 <article class="post container py-5">
 
   <header class="post-header">
-    <h1 class="post-title">{{ page.title | escape }}</h1>
+    <h1 class="post-title text-uppercase text-center">{{ page.title | escape }}</h1>
   </header>
 
   <div class="post-content">
