Adjusting inner headers

--- a/_sass/components/_base.scss
+++ b/_sass/components/_base.scss
@@ -51,12 +51,11 @@ a.show-on-hover {
   }
 }
 
-.post-header {
+.post-title {
   position: relative;
-  @extend .mb-5;
 }
 
-.post-header:after {
+.post-title:after {
   content: '';
   position: absolute;
   height: 4px;
