--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -4,7 +4,7 @@ layout: default
 
 <article class="post container py-5">
 
-  <header class="post-header">
+  <header class="post-header mb-5 pb-4">
     <h1 class="post-title text-uppercase text-center">{{ page.title | escape }}</h1>
   </header>
 
