Adding contact page

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -26,7 +26,7 @@
               <a class="nav-link px-md-3" href="/careers/">Careers</a>
           </li>
           <li class="nav-item ml-3">
-              <a class="btn btn-primary text-white text-uppercase" href="#"><i class="fa fa-phone mr-2" aria-hidden="true"></i>Contact Us</a>
+              <a class="btn btn-primary text-white text-uppercase" href="/contact/"><i class="fa fa-phone mr-2" aria-hidden="true"></i>Contact Us</a>
           </li>
           {% for my_page in page_paths -%}
             {% if my_page.title -%}
