--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,10 +8,10 @@
         <span class="mx-auto ml-md-auto mr-md-0 my-auto text-uppercase text-center text-md-right">
           <a class="text-white" href="#">Privacy Policy</a>
           <span class="text-muted">/</span>
-          <a class="text-white" href="#">Contact Us</a>
+          <a class="text-white" href="/contact/">Contact Us</a>
         </span>
       </div>
-      <div class="col-md-auto d-flex">
+      <!-- <div class="col-md-auto d-flex">
         <ul class="social-media-list mx-auto ml-md-2 my-4 my-md-auto">
             <li>
               <a href="#" target="_blank"><i class="fa fa-facebook-square" aria-hidden="true"></i></a>
@@ -22,7 +22,7 @@
             </li>
             {% endif -%}
           </ul>
-      </div>
+      </div> -->
     </div>
   </div>
 </footer>
